# hello-uv

./: Dockerfile  README.md  compose.yaml  pyproject.toml
.github/workflows/: test.yml
app/: __init__.py  main.py
tests/: test_main.py
tests/fast/: __init__.py  test_main.py
tests/slow/: __init__.py  test_app.py
