[project]
name = "hello-uv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = ["fastapi[standard]>=0.115.3"]

[dependency-groups]
dev = [
    "deptry>=0.20.0",
    "poethepoet>=0.29.0",
    "pyright>=1.1.386",
    "pytest-cov>=5.0.0",
    "pytest-docker>=3.1.1",
    "pytest>=8.3.3",
    "ruff>=0.7.0",
    "pip-audit>=2.7.3",
]

[tool.ruff.lint]
select = ["ALL"]
# and then manually ignore incomatible rules:
ignore = ["COM812", "D203", "D211", "D213"]
[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    # at least theese two should be fine in tests:
    "S101",   # asserts allowed in tests...
    "ANN401", # Any should be allowed
]

[tool.ruff.lint.isort]
# so it knows to group first-party stuff last
known-first-party = ["app"]


[tool.pyright]
venvPath = "."       # rye installs the venv in the current dir
venv = ".venv"       #       in a folder called `.venv`
strict = ["**/*.py"] # use 'strict' checking on all files

[tool.coverage.paths]
source = ["hello_uv"]

[tool.coverage.run]
branch = true
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 100
show_missing = true

[tool.poe.tasks]
fmt = "uv run ruff format"
lint = "uv run ruff check --fix"
pyright = "uv run pyright"
check-deps = "uv run deptry ."
audit = "uv run pip-audit"
fast-tests = "uv run pytest tests/fast -s --cov --cov-report=term-missing --cov-report=html"
slow-tests = "uv run pytest tests/slow"
release = ["lint", "pyright", "check-deps", "audit", "fast-tests", "slow-tests"]
